--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,12 @@
 <html>
+  <style>
+    .banner {
+      background-color: orange; 
+      padding: 20px;
+    }
+  </style>
   <body style="background-color: lightblue;"></bodystyle>
+    <div class="banner"></div>
     {{ content }}
   </body>
 </html>
