--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,11 +1,12 @@
 <html>
   <style>
     .banner {
-      background-color: orange; 
+      background-color: #00bfff; 
       padding: 20px;
     }
   </style>
-  <body style="background-color: lightblue;"></bodystyle>
+  {% include head.html %}
+  <body style="background-color: #add8e6;"></bodystyle>
     <div class="banner"></div>
     {{ content }}
   </body>
