Changes to defult.html, base.scss and head.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,10 @@
 <html>
-  <style>
-    .banner {
-      background-color: #00bfff; 
-      padding: 20px;
-    }
-  </style>
+
   {% include head.html %}
-  <body style="background-color: #add8e6;"></bodystyle>
-    <div class="banner"></div>
+
+  <body>
+
     {{ content }}
+    
   </body>
 </html>
