--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,7 +1,7 @@
 body {
-    background-color: #fd1313;
+    background-color: #0df4f4;
     font-family: sans-serif;
     margin: auto;
     max-width: 70ch;
-    color: #7be50a;
+    color: #e81212;
   }
