--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,7 +1,7 @@
 body {
-    background-color: #0df4f4;
+    background-color: #33b1b1;
     font-family: sans-serif;
     margin: auto;
     max-width: 70ch;
-    color: #e81212;
+    color: #000000;
   }
