--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,12 @@
 
   <body>
 
+    <header class="site-header">
+      <div class="wrapper">
+        <h1 class="site-title">{{ page.title | default: site.title }}</h1>
+      </div>
+    </header>
+
     {{ content }}
     
   </body>
