--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,10 @@
 
   <body>
 
+    <div class="top-banner" style="background-color: orange; padding: 10px 0; text-align: center; color: white;">
+      <p>Welcome to the site!</p>
+    </div>
+
     {{ content }}
     
   </body>
