--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
 
   <body>
 
-    <div class="top-banner" style="background-color: orange; padding: 10px 0; text-align: center; color: white;">
+    <div class="top-banner" style="background-color: orange; padding: 10px 0; text-align: center; color: white; width: 100%; margin: 0; position: relative;">
       <p>Welcome to the site!</p>
     </div>
 
