--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,5 +2,5 @@
     <title>{{ page.title }} | {{ site.title }}</title>
     
     <meta charset="utf-8">
-    
+    <link rel="stylesheet" href="{{ '/assets/my-theme.css' | relative_url }}">
   </head>
