--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -2,5 +2,6 @@ body {
     background-color: #33b1b1;
     font-family: sans-serif;
     margin: auto;
+    max-width: 10ch;
     color: #000000;
   }
