Added jekyll.png Updated default.html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,9 @@
     </div>
 
     {{ content }}
+
+    <img> scr="jekyll.png" alt="jekyll logo" style="width:auto;"></picture>
+
     
   </body>
 </html>
