--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 
     {{ content }}
 
-    <img> scr="jekyll.png" alt="jekyll logo" style="width:auto;"></picture>
+    <img> scr="jekyll.png" alt="jekyll logo" style="width:auto;"></img>
 
     
   </body>
